--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -108,6 +108,18 @@ Resources:
                   - "ec2:AssociateIamInstanceProfile"
                   - ec2:ReplaceIamInstanceProfileAssociation
                   - iam:PassRole
+                  - ecr:GetAuthorizationToken
+                  - "ecr:BatchCheckLayerAvailability"
+                  - "ecr:GetDownloadUrlForLayer"
+                  - "ecr:BatchGetImage"
+                  - "ecr:InitiateLayerUpload"
+                  - "ecr:UploadLayerPart"
+                  - "ecr:CompleteLayerUpload"
+                  - "ecr:GetRepositoryPolicy"
+                  - "ecr:DescribeRepositories"
+                  - "ecr:ListImages"
+                  - "ecr:DescribeImages"
+                  - "ecr:BatchGetImage"
                 Resource: "*"
   EC2InstanceProfile:
     Type: AWS::IAM::InstanceProfile
