--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -14,9 +14,6 @@ Parameters:
   SERVICENAME:
     Type: String
     Default: "translator"
-  GROUPNAME:
-    Type: String
-    Default: "sqs-group"
 #   DEPLOYREGION:
 #     Type: String
 #     Default: "eu-central-1"
@@ -44,7 +41,7 @@ Resources:
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Ref GROUPNAME
+      GroupName: !Join ["-", ["security-group", !Ref SERVICENAME, !Ref STAGE]]
       GroupDescription: Launch-Group-sqs
       # VpcId: !Ref EC2VPC
       SecurityGroupIngress:
@@ -82,6 +79,7 @@ Resources:
   #     MapPublicIpOnLaunch: true
   EC2IAMRole:
     Type: AWS::IAM::Role
+    Name: !Join ["-", ["ec2-iam-role", !Ref SERVICENAME, !Ref STAGE]]
     Properties:
       AssumeRolePolicyDocument:
         Statement:
@@ -92,7 +90,8 @@ Resources:
             Action: ["sts:AssumeRole"]
       Path: /
       Policies:
-        - PolicyName: EC2IAMRoleExecutionRole
+        - PolicyName:
+            !Join ["-", ["ec2-iam-policy", !Ref SERVICENAME, !Ref STAGE]]
           PolicyDocument:
             Statement:
               - Effect: Allow
@@ -123,6 +122,7 @@ Resources:
                 Resource: "*"
   EC2InstanceProfile:
     Type: AWS::IAM::InstanceProfile
+    Name: !Join ["-", ["ec2-instance-profile", !Ref SERVICENAME, !Ref STAGE]]
     Properties:
       Path: /
       Roles:
